--- a/UI/DynamicDriving.Trips.App/_Imports.razor
+++ b/UI/DynamicDriving.Trips.App/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using DynamicDriving.Trips.App
 @using DynamicDriving.Trips.App.Shared
+@using DynamicDriving.Trips.App.Support
