--- a/UI/DynamicDriving.Trips.App/Shared/NavMenu.razor
+++ b/UI/DynamicDriving.Trips.App/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject TokenProvider TokenProvider
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">DynamicDriving.Trips.App</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -8,23 +10,39 @@
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+    <AuthorizeView>
+        <Authorized>
+            <nav class="flex-column">
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Home
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="counter">
+                        <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="fetchdata">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                    </NavLink>
+                </div>
+            </nav>
+            <form action="/logoutidentity" method="post">
+                <button class="nav-link btn btn-link" type="submit">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Log out (@context.User.Identity.Name)
+                </button>
+                <input name="__RequestVerificationToken" type="hidden"
+                       value="@TokenProvider.XsrfToken">
+            </form>
+        </Authorized>
+        <NotAuthorized>
+            <NavLink class="list-group-item list-group-item-action bg-light" href="/loginidentity">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Log in
             </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-    </nav>
+        </NotAuthorized>
+    </AuthorizeView>
 </div>
 
 @code {
