--- a/UI/DynamicDriving.Trips.App/Pages/Counter.razor
+++ b/UI/DynamicDriving.Trips.App/Pages/Counter.razor
@@ -1,6 +1,7 @@
 ﻿@page "/counter"
 @using DynamicDriving.Trips.App.Services
 @attribute [Authorize]
+@*@attribute [Authorize(Policy = "IsAdmin")]*@
 
 <PageTitle>Counter</PageTitle>
 
